--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -27,5 +27,5 @@ http {
 
     init_by_lua_file lua/init_by_lua.lua;       # nginx启动时就会执行
     include ./conf.d/*.conf;                    # lua生成upstream
-    resolver 172.16.0.21;                       # 内部DNS
+    resolver 172.28.0.253 ipv6=off;                       # 内部DNS
 }
